# ETHZ-Path-Coverage

./: README.md
polygon_coverage_client/: CMakeLists.txt
polygon_coverage_client/launch/: polygon_coverage_client.launch
polygon_coverage_client/scripts/: polygon_client_node.py  robot_bond.py
set_arena/: CMakeLists.txt
set_arena/launch/: set_arena_node.launch
set_arena/src/: set_arena.cpp
workflow/: CMakeLists.txt
workflow/scripts/: dumpcap.sh  ethz_turtlebot.py
